Fixed header font sizes on mobile

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -230,7 +230,7 @@ header {
 	}
 	
 	h1 {
-		font-size: 3.3em;
+		font-size: 38px;
 		margin-bottom: -10px;
 		
 		@media (min-width:$tablet) {
@@ -243,7 +243,7 @@ header {
 	.description {
 		margin: 0px;
 		font-family: var(--font-header);
-		font-size: 1.35em;
+		font-size: 1.25em;
 		line-height: 27px;
 		
 		@media (min-width:$tablet) {
@@ -255,7 +255,7 @@ header {
 	.visit-link {
 		margin-top: 30px;
 		font-family: var(--font-header);
-		font-size: 25px;
+		font-size: 16px;
 		margin-top: 30px;
 		border: 2px solid var(--highlight);
 		color: var(--highlight);
@@ -266,7 +266,7 @@ header {
 		
 		@media (min-width:$tablet) {
 			margin-top: 60px;
-			
+			font-size: 25px;
 		}
 		
 		&:hover {
